--- a/src/main/template/status_code.handlebars
+++ b/src/main/template/status_code.handlebars
@@ -1,6 +1,5 @@
-<td width='15%' class='code'>{{{escape code}}}</td>
+<td width='20px'><strong>{{{escape code}}}</strong></td>
 <td class="markdown">{{{escape message}}}</td>
-<td width='50%'><span class="model-signature" /></td>
 <td class="headers">
   <table>
     <tbody>
