second round ui

--- a/src/main/template/main.handlebars
+++ b/src/main/template/main.handlebars
@@ -1,22 +1,20 @@
-<div class='info' id='api_info'>
-  {{#if info}}
-  <div class="info_title">{{{sanitize info.title}}}</div>
-  <div class="info_description markdown">{{{sanitize info.description}}}</div>
-  {{#if externalDocs}}
-  <p>{{{sanitize externalDocs.description}}}</p>
-  <a href="{{{escape externalDocs.url}}}" target="_blank">{{{escape externalDocs.url}}}</a>
-  {{/if}}
-  {{#if info.termsOfServiceUrl}}<div class="info_tos"><a target="_blank" href="{{{escape info.termsOfServiceUrl}}}" data-sw-translate>Terms of service</a></div>{{/if}}
-  {{#if info.contact.name}}<div><div class='info_name' style="display: inline" data-sw-translate>Created by </div> {{{escape info.contact.name}}}</div>{{/if}}
-  {{#if info.contact.url}}<div class='info_url' data-sw-translate>See more at <a href="{{{escape info.contact.url}}}">{{{escape info.contact.url}}}</a></div>{{/if}}
-  {{#if info.contact.email}}<div class='info_email'><a target="_parent" href="mailto:{{{escape info.contact.email}}}?subject={{{escape info.title}}}" data-sw-translate>Contact the developer</a></div>{{/if}}
-  {{#if info.license}}<div class='info_license'><a target="_blank" href='{{{escape info.license.url}}}'>{{{escape info.license.name}}}</a></div>{{/if}}
-  {{/if}}
+<div id="swagger_sidebar">
+    <div class="sticky-nav-placeholder">
+        <div class="sticky-nav">
+            <div class="mobile-nav">
+                <span class="select-label">API Reference: </span><span data-selected-value></span>
+            </div>
+            <div data-navigator>
+                <div data-resource="" label="Tools">
+                    <div class="item" data-tg-switch="">Swagger Resource <span class="status"></span> </div>
+                </div>
+                <div id="resources_nav" />
+            </div>
+        </div>
+    </div>
 </div>
 <div class='container' id='resources_container'>
-  <div class='authorize-wrapper'></div>
-
-  <ul id='resources'></ul>
+  <ul id='resources' class="samples-collapsed"></ul>
 
   <div class="footer">
     <h4 style="color: #999">[ <span style="font-variant: small-caps">base url</span>: {{{escape basePath}}}
