--- a/src/main/template/resource.handlebars
+++ b/src/main/template/resource.handlebars
@@ -1,3 +1,5 @@
+<ul class='endpoints' id='{{id}}_endpoint_list'>
+<!--
 <div class='heading'>
   <h2>
     <a href='#!/{{{sanitize id}}}' class="toggleEndpointList" data-id="{{{sanitize id}}}">{{{sanitize name}}}</a> {{#summary}} : {{/summary}}{{{sanitize summary}}}
@@ -24,5 +26,6 @@
   </ul>
 </div>
 <ul class='endpoints' id='{{{sanitize id}}}_endpoint_list' style='display:none'>
-
+</ul>
+-->
 </ul>
