--- a/src/main/template/content_type.handlebars
+++ b/src/main/template/content_type.handlebars
@@ -1,10 +1,6 @@
+<span style="display:none">
 <label data-sw-translate for="{{{escape contentTypeId}}}">Response Content Type</label>
 <select name="contentType" id="{{{escape contentTypeId}}}">
-{{#if produces}}
-  {{#each produces}}
-	<option value="{{{sanitize this}}}">{{{sanitize this}}}</option>
-	{{/each}}
-{{else}}
   <option value="application/json">application/json</option>
-{{/if}}
 </select>
+</span>
