--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -1,6 +1,8 @@
   <ul class='operations' >
     <li class='{{{escape method}}} operation' id='{{{escape parentId}}}_{{{escape nickname}}}'>
+      <div class='content'>
       <div class='heading'>
+      <h2 class='operation-title'>{{{escape summary}}}</h2>
         <h3>
           <span class='http_method'>
           <a href='#!/{{sanitize encodedParentId}}/{{sanitize nickname}}' class="toggleOperation">{{{escape method}}}</a>
@@ -9,101 +11,69 @@
           <a href='#!/{{sanitize encodedParentId}}/{{sanitize nickname}}' class="toggleOperation {{#if deprecated}}deprecated{{/if}}">{{{escape path}}}</a>
           </span>
         </h3>
-        <ul class='options'>
-          <li>
-          <a href='#!/{{sanitize encodedParentId}}/{{sanitize nickname}}' class="toggleOperation"><span class="markdown">{{{escape summary}}}</span></a>
-          </li>
-        </ul>
       </div>
-      <div class='content' id='{{sanitize encodedParentId}}_{{sanitize nickname}}_content' style='display:none'>
+
+      <a href="javascript:;" class="toggle-samples" data-toggle="tooltip" data-placement="left" data-original-title title>
+        <span class="text">Show Sample</span><span class="circle-icon"></span>
+      </a>
+
         {{#if deprecated}}
             <h4><span data-sw-translate>Warning: Deprecated</span></h4>
         {{/if}}
         {{#if description}}
         <h4><span data-sw-translate>Implementation Notes</span></h4>
-        <div class="markdown">{{{sanitize description}}}</div>
+        <div class="markdown action-summary">{{{sanitize description}}}</div>
         {{/if}}
         {{#if security}}
             <div class='authorize-wrapper authorize-wrapper_operation'></div>
         {{/if}}
-        {{#if type}}
-          <div class="response-class">
-            <h4><span data-sw-translate>Response Class</span> (<span data-sw-translate>Status</span> {{{escape successCode}}})</h4>
-              {{#if successDescription}}<div class="markdown">{{{sanitize successDescription}}}</div>{{/if}}
-            <p><span class="model-signature" /></p>
-            <br/>
-            <div class="response-content-type" />
+        
+        <form accept-charset="UTF-8" class="sandbox">
+        {{#if parameters}}
+            <h4 class="swagger-expand" data-control data-parm-toggle data-toggle="collapse" data-target="#parm-{{{escape parentId}}}_{{{escape nickname}}}">
+                Parameters
+            </h4>
+            <div data-content class="operation-params collapse" id="parm-{{{escape parentId}}}_{{{escape nickname}}}"></div>
+        {{/if}}
+        <h4 data-control data-toggle='collapse' data-target='#test-{{{escape parentId}}}_{{{escape nickname}}}'>Test this endpoint</h4>
+<div class="heading">
+        <h3>
+          <span class='http_method'>
+          <a href='#!/{{sanitize encodedParentId}}/{{sanitize nickname}}' class="toggleOperation">{{{escape method}}}</a>
+          </span>
+          <span class='path'>
+          <a href='#!/{{sanitize encodedParentId}}/{{sanitize nickname}}' class="toggleOperation {{#if deprecated}}deprecated{{/if}}">{{{escape path}}}</a>
+          </span>
+        </h3>
+</div>
+
+        <div id='test-{{{escape parentId}}}_{{{escape nickname}}}'>
+            <div class="sandbox_header" data-content>
+                <input class="submit btn btn-primary" name="commit" type="submit" value="Try it out" data-target='#get_clients-modal-request'>
+                <a href="#" class="response_hider hide" style="display:inline">Hide Response</a>
             </div>
-        {{/if}}
+        </div>
 
-        {{#if headers}}
-          <h4 data-sw-translate>Headers</h4>
-          <table class="headers">
-            <thead>
-              <tr>
-                <th style="width: 100px; max-width: 100px" data-sw-translate>Header</th>
-                <th style="width: 310px; max-width: 310px" data-sw-translate>Description</th>
-                <th style="width: 200px; max-width: 200px" data-sw-translate>Type</th>
-                <th style="width: 320px; max-width: 320px" data-sw-translate>Other</th>
-              </tr>
-            </thead>
-            <tbody>
-              {{#each headers}}
-              <tr>
-                <td>{{@key}}</td>
-                <td>{{{sanitize this.description}}}</td>
-                <td>{{{escape this.type}}}</td>
-                <td>{{{escape this.other}}}</td>
-              </tr>
-              {{/each}}
-            </tbody>
-          </table>
-        {{/if}}
+                {{#if responseMessages}}
+                    <div style="margin:0;padding:0;display:inline"></div>
+                    <h4 data-control data-toggle="collapse" data-target="#response-{{parentId}}_{{nickname}}">
+                        Response Messages
+                    </h4>
 
-        <form accept-charset='UTF-8' class='sandbox'>
-          <div style='margin:0;padding:0;display:inline'></div>
-          {{#if parameters}}
-          <h4 data-sw-translate>Parameters</h4>
-          <table class='fullwidth parameters'>
-          <thead>
-            <tr>
-            <th style="width: 100px; max-width: 100px" data-sw-translate>Parameter</th>
-            <th style="width: 310px; max-width: 310px" data-sw-translate>Value</th>
-            <th style="width: 200px; max-width: 200px" data-sw-translate>Description</th>
-            <th style="width: 100px; max-width: 100px" data-sw-translate>Parameter Type</th>
-            <th style="width: 220px; max-width: 230px" data-sw-translate>Data Type</th>
-            </tr>
-          </thead>
-          <tbody class="operation-params">
+                    <div data-content class="responses-wrapper collapse in" id="response-{{parentId}}_{{nickname}}">
+                        <table class="fullwidth">
+                            <tbody class="operation-status">
+                            </tbody>
+                        </table>
+                    </div>
+                {{/if}}
+            </form>
 
-          </tbody>
-          </table>
-          {{/if}}
-          {{#if responseMessages}}
-          <div style='margin:0;padding:0;display:inline'></div>
-          <h4 data-sw-translate>Response Messages</h4>
-          <table class='fullwidth response-messages'>
-            <thead>
-            <tr>
-              <th data-sw-translate>HTTP Status Code</th>
-              <th data-sw-translate>Reason</th>
-              <th data-sw-translate>Response Model</th>
-              <th data-sw-translate>Headers</th>
-            </tr>
-            </thead>
-            <tbody class="operation-status">
-            </tbody>
-          </table>
-          {{/if}}
-          {{#if isReadOnly}}
-          {{else}}
-          <div class='sandbox_header'>
-            <input class='submit' type='submit' value='Try it out!' data-sw-translate/>
-            <a href='#' class='response_hider' style='display:none' data-sw-translate>Hide Response</a>
-            <span class='response_throbber' style='display:none'></span>
-          </div>
-          {{/if}}
-        </form>
+        </div>
+        <div class="samples">
+            <span class="model-signature">
+            </span>
+        </div>
         <div class='response' style='display:none'>
           <h4 class='curl'>Curl</h4>
           <div class='block curl'></div>
@@ -120,6 +90,5 @@
           <h4 data-sw-translate>Response Headers</h4>
           <div class='block response_headers'></div>
         </div>
-      </div>
     </li>
   </ul>
