--- a/src/main/template/param.handlebars
+++ b/src/main/template/param.handlebars
@@ -1,36 +1,48 @@
-<td class='code'><label for='{{{escape valueId}}}'>{{{escape name}}}</label></td>
-<td>
+<div class="param-property hide">{{name}}</div>
+<div class="param-property" data-label='{{name}}'>
+    {{#if isBody}}
+        {{#if isFile}}
+            <input type="file" name='{{name}}'/>
 
-	{{#if isBody}}
-		{{#if isFile}}
-			<input type="file" name='{{{escape name}}}' id='{{{escape valueId}}}'/>
-			<div class="parameter-content-type" />
-		{{else}}
-			{{#if default}}
-				<div class="editor_holder"></div>
-				<textarea class='body-textarea' name='{{{escape name}}}' id='{{{escape valueId}}}'>{{{escape default}}}</textarea>
-        <br />
-        <div class="parameter-content-type" />
-			{{else}}
-				<textarea class='body-textarea' name='{{{escape name}}}' id='{{{escape valueId}}}'></textarea>
-				<div class="editor_holder"></div>
-				<br />
-				<div class="parameter-content-type" />
-			{{/if}}
-		{{/if}}
-	{{else}}
-		{{#if isFile}}
-			<input type="file" name='{{{escape name}}}' id='{{{escape valueId}}}'/>
-			<div class="parameter-content-type" />
-		{{else}}
-			{{#renderTextParam this}}
-			{{/renderTextParam}}
-		{{/if}}
-	{{/if}}
+            <div class="parameter-content-type"/>
+        {{else}}
+            {{#if default}}
+                <div class="editor_holder"></div>
 
-</td>
-<td class="markdown">{{{sanitize description}}}</td>
-<td>{{{escape paramType}}}</td>
-<td>
-	<span class="model-signature"></span>
-</td>
+                <textarea class='body-textarea ui-form-control' name='{{name}}' data-toggle="tooltip" data-placement="top" title="" data-original-title='{{name}}'>{{default}}</textarea>
+                <div class="parameter-content-type"/>
+            {{else}}
+                <textarea class='body-textarea ui-form-control' name='{{name}}' data-toggle="tooltip" data-placement="top" title="" data-original-title='{{name}}'></textarea>
+                <div class="editor_holder"></div>
+                <div class="parameter-content-type"/>
+            {{/if}}
+        {{/if}}
+        <div class="small-description">
+            {{#if type}}
+                <code class="code-signature">{{type}}</code>
+            {{/if}}
+            <div class="markdown">{{description}}</div>
+        </div>
+    {{else}}
+        {{#if isFile}}
+
+            <label class="btn btn-primary" for="my-file-selector">
+                <input id="my-file-selector" type="file" style="display:none;" name='{{name}}'>
+                Choose file
+            </label>
+            <div class="parameter-content-type"/>
+        {{else}}
+            {{#if default}}
+                <input class='parameter ui-form-control' minlength='0' name='{{name}}' placeholder='' type='{{inputType}}' value='{{default}}'  data-toggle="tooltip" data-placement="right" title="" data-original-title='{{name}}'/>
+            {{else}}
+                <input class='parameter ui-form-control' minlength='0' name='{{name}}' placeholder='' type='{{inputType}}' value=''  data-toggle="tooltip" data-placement="right" title="" data-original-title='{{name}}'/>
+            {{/if}}
+        {{/if}}
+        <div class="small-description">
+            {{#if type}}
+                <code class="code-signature">{{type}}</code>
+            {{/if}}
+            <div class="markdown">{{description}}</div>
+        </div>
+    {{/if}}
+</div>
