--- a/src/main/template/param_readonly_required.handlebars
+++ b/src/main/template/param_readonly_required.handlebars
@@ -1,15 +1,21 @@
-<td class='code required'><label for='{{{escape valueId}}}'>{{{sanitize name}}}</label></td>
-<td>
-    {{#if isBody}}
-        <textarea class='body-textarea' readonly='readonly' placeholder='(required)' name='{{{sanitize name}}}' id='{{{escape valueId}}}'>{{{sanitize default}}}</textarea>
-    {{else}}
-        {{#if default}}
-            {{{sanitize default}}}
+<div class="param-property hide" data-label="name">{{name}}</div>
+<div class="param-property" data-label='{{name}}'>
+    <div>
+        {{#if isBody}}
+            <textarea class='body-textarea ui-form-control' readonly='readonly' placeholder='(required)' name='{{name}}'  data-toggle="tooltip" data-placement="top" title="" data-original-title='{{name}}'>{{default}}</textarea>
+            <div class="parameter-content-type"/>
         {{else}}
-            (empty)
+            {{#if default}}
+                {{default}}
+            {{else}}
+                (empty)
+            {{/if}}
         {{/if}}
-    {{/if}}
-</td>
-<td class="markdown">{{{sanitize description}}}</td>
-<td>{{{escape paramType}}}</td>
-<td><span class="model-signature"></span></td>
+        <div class="small-description">
+            {{#if type}}
+                <code class="code-signature">{{type}}</code>
+            {{/if}}
+            <div class="markdown">{{description}}</div>
+        </div>
+    </div>
+</div>
