--- a/src/main/template/param_required.handlebars
+++ b/src/main/template/param_required.handlebars
@@ -1,32 +1,36 @@
-<td class='code required'><label for='{{{escape valueId}}}'>{{{escape name}}}</label></td>
-<td>
-	{{#if isBody}}
-		{{#if isFile}}
-			<input type="file" name='{{{escape name}}}' id='{{{escape valueId}}}'/>
-		{{else}}
-			{{#if default}}
-				<div class="editor_holder"></div>
-				<textarea class='body-textarea required' placeholder='(required)' name='{{{sanitize name}}}' id="{{{escape valueId}}}">{{{sanitize default}}}</textarea>
-        <br />
-        <div class="parameter-content-type" />
-			{{else}}
-				<textarea class='body-textarea required' placeholder='(required)' name='{{{sanitize name}}}' id='{{{escape valueId}}}'></textarea>
-				<div class="editor_holder"></div>
-				<br />
-				<div class="parameter-content-type" />
-			{{/if}}
-		{{/if}}
-	{{else}}
-		{{#if isFile}}
-			<input class='parameter' class='required' type='file' name='{{{sanitize name}}}' id='{{{escape valueId}}}'/>
-		{{else}}
-			{{#renderTextParam this}}
-			{{/renderTextParam}}
-		{{/if}}
-	{{/if}}
-</td>
-<td>
-	<strong><span class="markdown">{{{sanitize description}}}</span></strong>
-</td>
-<td>{{{escape paramType}}}</td>
-<td><span class="model-signature"></span></td>
+<div class="param-property hide">{{name}}</div>
+<div class="param-property" data-label='{{name}}'>
+    {{#if isBody}}
+        {{#if isFile}}
+            <input type="file" name='{{name}}'/>
+        {{else}}
+            {{#if default}}
+                <div class="editor_holder"></div>
+                <textarea class='body-textarea ui-form-control required' placeholder='(required)' name='{{name}}'  data-toggle="tooltip" data-placement="top" title="" data-original-title='{{name}}'>{{default}}</textarea>
+                <div class="parameter-content-type"/>
+            {{else}}
+                <textarea class='body-textarea ui-form-control required' placeholder='(required)' name='{{name}}' data-toggle="tooltip" data-placement="top" title="" data-original-title='{{name}}'></textarea>
+                <div class="editor_holder"></div>
+                <br/>
+                <div class="parameter-content-type"/>
+            {{/if}}
+        {{/if}}
+    {{else}}
+        {{#if isFile}}
+            <input class='parameter ui-form-control required' type='file' name='{{name}}'/>
+        {{else}}
+            {{#if default}}
+                <input class='parameter ui-form-control required' minlength='1' name='{{name}}' placeholder='(required)' type='{{inputType}}' value='{{default}}' data-toggle="tooltip" data-placement="right" title="" data-original-title='{{name}}'/>
+            {{else}}
+                <input class='parameter ui-form-control required' minlength='1' name='{{name}}' placeholder='(required)' type='{{inputType}}' value='' data-toggle="tooltip" data-placement="right" title="" data-original-title='{{name}}'/>
+            {{/if}}
+        {{/if}}
+    {{/if}}
+    <div class="small-description">
+        {{#if type}}
+            <code class="code-signature">{{type}}</code>
+        {{/if}}
+        <div class="markdown">{{description}}</div>
+    </div>
+</div>
+
